--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.1",
     "react-flippy": "^0.1.5",
     "react-parallax": "^3.1.2",
+    "react-player": "^2.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-scroll-parallax": "^2.3.5",
@@ -31,6 +32,7 @@
     "reactstrap": "^8.7.1",
     "reducers": "^3.0.0-alpha",
     "stripe": "^8.121.0",
+    "video-react": "^0.14.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
