--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-pro": "^5.3.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
@@ -22,6 +23,7 @@
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.1",
     "react-flippy": "^0.1.5",
+    "react-hover-video-player": "^6.7.0",
     "react-parallax": "^3.1.2",
     "react-player": "^2.7.2",
     "react-router-dom": "^5.2.0",
