--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
     "firebase": "^8.0.2",
     "font-awesome-icons": "^1.6.0",
     "moment": "^2.29.1",
