--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-state-context": "^1.0.0",
     "reactstrap": "^8.7.1",
     "reducers": "^3.0.0-alpha",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "stripe": "^8.121.0",
     "video-react": "^0.14.1",
     "web-vitals": "^0.2.4"
